--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "flickity": "^3.0.0",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flickity-component": "^3.6.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
     "react-pro-sidebar": "^0.7.1",
