--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^16.0.0",
         "email-validator": "^2.0.4",
         "express": "^4.17.3",
+        "fast-levenshtein": "^3.0.0",
         "mockgoose": "^8.0.4",
         "mongodb": "^4.4.0",
         "mongoose": "^6.2.4",
